Repair mobile spacing

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -103,6 +103,7 @@ li {
   height: auto;
   margin: 0 auto;
   max-width: 32em;
+  padding: 0 1rem;
   text-align: justify;
 }
 
